// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContent - Snapshots > matches snapshot with repost 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-cy="post-text"
    data-testid="container"
  >
    <p>
      Quote
    </p>
  </div>
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with single-line content 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3"
  data-testid="container"
>
  <div
    class="text-base leading-6 font-medium wrap-anywhere hyphens-auto whitespace-pre-line text-secondary-foreground"
    data-cy="post-text"
    data-testid="container"
  >
    <p>
      One liner
    </p>
  </div>
</div>
`;
